--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^5.6.0",
     "@typescript-eslint/parser": "^5.6.0",
+    "csv-parse": "^5.0.3",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.25.2",
     "express": "^4.17.1",
+    "multer": "^1.4.4",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/multer": "^1.4.7",
     "@types/uuid": "^8.3.3",
     "eslint": "^8.4.1",
     "eslint-config-prettier": "^8.3.0",
