--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "eslint-plugin-import": "^2.25.2",
     "express": "^4.17.1",
     "multer": "^1.4.4",
+    "swagger-ui-express": "^4.3.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/multer": "^1.4.7",
+    "@types/swagger-ui-express": "^4.1.3",
     "@types/uuid": "^8.3.3",
     "eslint": "^8.4.1",
     "eslint-config-prettier": "^8.3.0",
