--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "eslint-plugin-import": "^2.25.2",
     "express": "^4.17.1",
     "multer": "^1.4.4",
+    "pg": "^8.7.1",
+    "reflect-metadata": "^0.1.13",
     "swagger-ui-express": "^4.3.0",
+    "typeorm": "^0.2.41",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
