--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ version: "3.9"
 services:
   database:
     image: postgres
-    container_name: database_ignite
+    container_name: database
     restart: always
     ports:
       - 5432:5432
@@ -22,7 +22,7 @@ services:
     ports:
       - 3333:3333
     volumes:
-      - .:/usr/docker
+      - .:/docker
     links:
       - database
     depends_on: 
