--- a/ormconfig.json
+++ b/ormconfig.json
@@ -6,6 +6,7 @@
 "password":"2299",
 "database":"rentx",
 "migrations": ["./src/database/migrations/*.ts"],
+"entities": ["./src/modules/**/entities/*.ts"],
 "cli": {
     "migrationsDir": "./src/database/migrations"
 }
