Tratamento de erros no CreateCategoryController adicionado, conexão com docker aparentemente funcional e markdowns adicionados.

--- a/ormconfig.json
+++ b/ormconfig.json
@@ -2,8 +2,8 @@
 "type":"postgres",
 "port":5432,
 "host":"localhost",
-"username":"docker",
-"password":"2299",
+"username":"reis",
+"password":"307711",
 "database":"rentx",
 "migrations": ["./src/database/migrations/*.ts"],
 "entities": ["./src/modules/**/entities/*.ts"],
