--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,8 +10,8 @@ services:
     ports:
       - 5432:5432
     environment:
-      - POSTGRES_USER=docker
-      - POSTGRES_PASSWORD=2299
+      - POSTGRES_USER=reis
+      - POSTGRES_PASSWORD=337711
       - POSTGRES_DB=rentx
     volumes:
       - pgdata:/data/postgres
@@ -19,10 +19,11 @@ services:
   app:
     build: .
     container_name: rentx
+    restart: always
     ports:
       - 3333:3333
     volumes:
-      - .:/docker
+      - .:/usr/docker
     links:
       - database
     depends_on: 
